Agregados: Test Simple (Con todos los test a Opcion-abstracta), EstadoTest, ModificadorTest, PreguntaMock (se deberia aplicar con Mock-ito).    Co-authored-by: Ignacio Orgeira <nachoorgeira@gmail.com>